[package]
name = "image_resize_server"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
image = "0.23.12"
webp = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.1"