[package]
name = "imogene"
version = "1.0.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

[lib]
name = "imogen"

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
image = "0.23.12"
webp = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
futures = "0.3.1"